Change find command testcases to suit new behavior